--- a/form-display.css
+++ b/form-display.css
@@ -8,9 +8,33 @@
     display: inline-block;
     font-size: 16px;
     margin: 10px;
+    font-family: Helvetica;
+}
+
+h2 {
+    font-family: Helvetica;
+}
+
+h3 {
+    font-family: Helvetica;
+    margin: 0;
 }
 
 .desc {
+    font-family: Helvetica;
 	height: 30px;
 	font-size: 10px;
+    margin-left: 10pt;
+
+}
+
+svg {
+    font-family: Helvetica;
+    font-size: 10px;
+}
+
+ul {
+    font-family: Helvetica;
+    font-size: 10px;
+    margin-left: 10pt; 
 }
